--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>TechTing - Tech Movies & Documentaries</title>
+    <link rel="icon" type="image/x-icon" href="/images/cinema_popcorn_icon-icons.com_66128.ico">
 </head>
 <body>
     <!-- Header Navigation -->
@@ -34,7 +35,7 @@
     <section id="about" class="content-section about-section">
         <div class="about-container">
             <div class="about-content">
-                <h2 class="section-title">About TechTing</h2>
+                <h2 class="section-title">About Me</h2>
                 <div class="about-text">
                     <p>I'm passionate about web development and currently working on TechTing, my mini-project to refine my skills. Next, I plan to dive into mobile development to expand my expertise and create dynamic experiences across platforms. Always learning, always building!</p>
                 </div>
