--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>TechTing - Tech Movies & Documentaries</title>
-    <link rel="icon" type="image/x-icon" href="/images/cinema_popcorn_icon-icons.com_66128.ico">
+    <link rel="icon" type="image/x-icon" href="./images/cinema_popcorn_icon-icons.com_66128.ico">
 </head>
 <body>
     <!-- Header Navigation -->
