Remove Hero and Header From Main

--- a/index.html
+++ b/index.html
@@ -12,36 +12,35 @@
     />
   </head>
   <body>
+    <!-- Header Navigation -->
+    <header>
+      <nav>
+        <a href="#home" class="logo">TechTing</a>
+        <ul class="nav-menu">
+          <li><a href="#home" class="active">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#movies">Movies</a></li>
+          <li><a href="#documentaries">Documentaries</a></li>
+          <li><a href="#watchlist">Watchlist</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+      <div class="hero-content">
+        <h1>Cinema & Code 🔧</h1>
+        <p class="subtitle">
+          Explore the fascinating world of technology through compelling movies
+          and documentaries that dive into AI, cybersecurity, innovation, and
+          the digital revolution. These stories offer thought-provoking insights
+          into how technology shapes our lives and the future.
+        </p>
+        <a href="#movies" class="btn">Start Watching</a>
+      </div>
+    </section>
+
     <main>
-      <!-- Header Navigation -->
-      <header>
-        <nav>
-          <a href="#home" class="logo">TechTing</a>
-          <ul class="nav-menu">
-            <li><a href="#home" class="active">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#movies">Movies</a></li>
-            <li><a href="#documentaries">Documentaries</a></li>
-            <li><a href="#watchlist">Watchlist</a></li>
-          </ul>
-        </nav>
-      </header>
-
-      <!-- Hero Section -->
-      <section id="home" class="hero">
-        <div class="hero-content">
-          <h1>Cinema & Code 🔧</h1>
-          <p class="subtitle">
-            Explore the fascinating world of technology through compelling
-            movies and documentaries that dive into AI, cybersecurity,
-            innovation, and the digital revolution. These stories offer
-            thought-provoking insights into how technology shapes our lives and
-            the future.
-          </p>
-          <a href="#movies" class="btn">Start Watching</a>
-        </div>
-      </section>
-
       <!-- About Me Section -->
       <section id="about" class="content-section about-section">
         <div class="about-container">
